[tool.poetry]
name = "fix-my-building-webapp"
version = "0.1.0"
description = ""
authors = ["Giannis Flouris"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "<2.0.0"
pandas = ">=2.0.0"
streamlit = "*"
plotly = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
